# citylab

./: .env.example  .flaskenv  .gitignore  AGENTS.md  CLAUDE.md  README.md  TASKS.md  config.yaml  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  requirements.txt  restart_server.sh  run.py  run_citylab.py  skill-injection-registry.yaml  tailwind.config.js
.claude/: AVAILABLE_MAGIC.md  settings.json
.claude/commands/: commit-push.md
.claude/skills/: kenwood-blog-README.md
.codex/: config.toml
.codex/prompts/: abilities--cloak-browser.md  abilities--handoff.md  abilities--production-log.md  abilities--switchboard.md  abilities--timed-followups.md  commit-push.md  email--content-security.md  opsx--ff.md  (+45 more)
data/: icu_stream_1108_irradiance.json
docs/: citether-app-pwa-prompt.md  citether-base44-update-transfer.md  citether-pitch-deck-v3-follow-me-power.md  citether-pitch-deck.md  citether-qa-cheat-sheet.md  citether-website-prompt.md  orchestration-quickstart.md  orchestration-reference.md
mockups/: theme-3-volt.html
orch/: agent_attribution.rb  config.yaml  orchestrator.rb  progress_manager.rb  state_manager.rb  usage_tracker.rb
remotion/: package-lock.json  package.json
scripts/: backfill_icu_irradiance.py
templates/: base.html  index.html
tests/: __init__.py  conftest.py  test_agent.py  test_api_token.py  test_auth.py  test_demand_response.py  test_dispatch_api.py  test_energy_charts_api.py  test_energy_dashboard.py  test_energy_ingestion.py  test_health.py  test_hero_context.py  test_solcast_ingestion.py  test_weather_ingestion.py
(+364 files in other folders)
